# hepta-ai

./: .gitignore  .vercelignore  CLAUDE.md  MLFLOW_INTEGRATION.md  Procfile  README.md  build.sh  demo.html  package.json  requirements.txt  vercel.json
.claude/hooks/: client-change-hook.sh  (+1 more)
client/: .env.production  package-lock.json  package.json  vite.config.js
datavint/: __init__.py  cli.py  config.py  experiment.py  issues.py  mlflow_integration.py  similarity.py  statistics.py  types.py
docs/: CNAME  README.md  deploy.md  deploy.sh  index.html  netlify.toml  styles.css
examples/: demo_profiling.py  demo_validation.py  demo_validation_corrupted.py  experiment_lineage_demo.py  mlflow_sync_demo.py  quick_profile.py
heptaai/: __init__.py  issues.py
memory/: README.md  SETUP.md  decisions.md  gotchas.md  hybrid-routing.md  patterns.md  tips.md
notebooks/: GETTING_STARTED.md  README.md  data_profiling_demo.ipynb  quickstart.ipynb
server/: pyproject.toml  requirements.txt
server/api/: main.py
server/api/routes/: cli_experiments.py  code_playground.py  data.py  visualization.py
server/api/services/: llm_client.py
server/datavint/: __init__.py  config.py  issues.py  manifest.py  profiling.py  statistics.py
server/datavint/detectors/: base.py  imbalance.py  missing_values.py  schema.py  skew.py
server/datavint/utils/: divergence.py
tests/: test_experiment_tracking.py  test_histogram_storage.py  test_similarity.py
validation/: README.md  __init__.py  data_fixer.py  metrics.py  model_trainer.py
website/: deploy.sh
wiki/: README.md
(+55 files in other folders)
